bppackaging/src/objects/Applicable_Taxes__c.object
<CustomObject>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Item__c</fullName>
        <label>Sales Tax Item</label>
        <referenceTo>Sales_Tax_Item__c</referenceTo>
        <relationshipLabel>Applicable Taxes</relationshipLabel>
        <relationshipName>Applicable_Taxes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Applicable Taxes</relationshipLabel>
        <relationshipName>Applicable_Taxes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Applicable Taxes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{000000}</displayFormat>
        <label>Applicable Taxes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicable Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>